--- a/package.json
+++ b/package.json
@@ -8,9 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.1",
+    "js-base64": "^2.5.2",
+    "js-cookie": "^2.2.1",
+    "normalize.css": "^8.0.1",
+    "nprogress": "^0.2.0",
+    "script-ext-html-webpack-plugin": "^2.1.4",
+    "svg-sprite-loader": "^4.3.0",
+    "upgrade": "^1.1.0",
     "vue": "^2.6.11",
+    "vue-axios": "^2.1.5",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
@@ -24,6 +33,9 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "node-sass": "^4.14.1",
+    "sass-loader": "^8.0.2",
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.43.0"
   }
 }
